Some refactoring... Fix: Video enable/disable actions now respond. Adds button to enable/disable video (but it's invisible for now).

--- a/projects/qts3videoclient/res/default.css
+++ b/projects/qts3videoclient/res/default.css
@@ -34,7 +34,7 @@ TileViewWidget #leftPanelContainer {
 }
 
 TileViewWidget #leftPanelContainer QPushButton:checked {
-  background: rgb(25, 26, 27)
+  background: rgb(45, 45, 45);
 }
 
 TileViewWidget QScrollArea QWidget {
